app/assets/stylesheets/components/_footer.scss
.footer {
  background-color: #404040;
  color: #9d9898;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 60px;
  padding: 0px;
  flex-shrink: 0;

  p {
    margin: 30px 10px;
    font-size: 12px;
  }
}
.footer-links {
  display: flex;
  align-items: center;
}
.footer-links a {
  color: black;
  opacity: 0.15;
  text-decoration: none;
  font-size: 24px;
  padding: 0px 10px;
}
.footer-links a:hover {
  opacity: 1;
}
.footer .fa-heart {
  color: #D23333;
}

